...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:background="#82e9de"
        android:text="ADD DATA"
        android:textColor="@color/black"
        android:textSize="20sp"
...
